--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ keywords = ["2-photon", "miniscope", "1-photon", "calcium imaging", "analysis"]
 requires-python = "==3.11.11"
 
 dependencies = [
-  "SimpleITK",
   "aenum",
   "cairosvg",
   "customtkinter",
@@ -23,8 +22,8 @@ dependencies = [
   "libsvm",
   "lxml",
   "numpy<2.0",
-  "opencv-python",
   "opencv-contrib-python",
+  "opencv-python",
   "pandas",
   "plotly",
   "prettytable",
@@ -35,7 +34,6 @@ dependencies = [
   "scipy",
   "seaborn",
   "streamlit",
-  "streamlit-cropper",
   "toml",
   "tomli",
   "tqdm",
@@ -48,3 +46,16 @@ dependencies = [
 
 [tool.setuptools.packages.find]
 where = ["."]
+
+[project.optional-dependencies]
+base = [
+  "git+https://github.com/thicclatka/CaImAn.git",
+  "roicat==1.3.6",
+  "git+https://github.com/RichieHakim/roiextractors.git",
+]
+gpu = [
+  "git+https://github.com/lebedov/scikit-cuda.git",
+  "git+https://github.com/thicclatka/SQLJobScheduler.git",
+]
+all = ["CLAH_ImageAnalysis[base]", "CLAH_ImageAnalysis[gpu]"]
+nogpu = ["CLAH_ImageAnalysis[base]"]
