--- a/environment.yml
+++ b/environment.yml
@@ -24,11 +24,9 @@ dependencies:
   - matplotlib
   - moviepy
   - mypy
-  - numpy <2.0.0>=1.26
+  - numpy >=1.26,<2.0.0
   - numpydoc
   - opencv
-  - opencv-contrib-python
-  - opencv-python
   - pandas
   - panel >=1.0.2
   - peakutils >=1.3.5
@@ -48,7 +46,7 @@ dependencies:
   - scipy >= 1.10.1
   - seaborn
   - streamlit
-  - tensorflow >=2.4.0<2.16
+  - tensorflow >=2.4.0,<2.16
   - tifffile
   - tk
   - toml
