--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,23 +37,6 @@ jobs:
     - name: Check out repository code
       uses: actions/checkout@v4
 
-    - name: Set up conda
-      uses: conda-incubator/setup-miniconda@v3
-      with:
-        miniconda-version: latest
-        auto-activate-base: true
-        auto-update-conda: false
-        remove-profiles: true
-        architecture: x64
-        clean-patched-environment-file: true
-        run-post: true
-
-    - name: Create/Update conda environment
-      run: |
-        conda env remove -n caiman || true
-        conda env create -f environment.yml -n caiman
-        conda activate caiman
-
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
@@ -72,6 +55,11 @@ jobs:
         echo "OS info (uname -a):"
         uname -a
 
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
     - name: Install base package
       run: |
         pip install -v -e .
@@ -83,5 +71,4 @@ jobs:
 
     - name: Run tests
       run: |
-        pip install pytest
         python -m pytest -v --color=yes
