--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,19 +73,28 @@ jobs:
         df -h
         echo "OS info (uname -a):"
         uname -a
+    
+    - name: Install uv (UNIX)
+      if: startsWith(matrix.os, 'macos') || startsWith(matrix.os, 'ubuntu')
+      run: |
+        curl -LsSf https://astral.sh/uv/install.sh | sh
+
+    - name: Install uv (Windows)
+      if: startsWith(matrix.os, 'windows')
+      run: |
+        powershell -ExecutionPolicy ByPass -c "irm https://astral.sh/uv/install.ps1 | iex"
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        uv pip install --system -r requirements.txt
 
     - name: Install base package
       run: |
-        pip install -v -e .
+        uv pip install -e .
 
     - name: Check installed packages
       run: |
-        pip list
+        uv pip list
       
     - name: Test installation
       run: |
