--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,6 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-        cache: 'pip'
 
     - name: Check specs of the machine -- Linux
       if: startsWith(matrix.os, 'ubuntu')
@@ -90,11 +89,11 @@ jobs:
 
     - name: Install base package
       run: |
-        uv pip install -e .
+        uv pip install --system -v -e .
 
     - name: Check installed packages
       run: |
-        uv pip list
+        uv pip --system list
       
     - name: Test installation
       run: |
