Update: Switch to uv for faster package management

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,7 +93,7 @@ jobs:
 
     - name: Check installed packages
       run: |
-        uv pip --system list
+        uv pip list --system
       
     - name: Test installation
       run: |
