--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
   "libsvm",
   "lxml",
   "numpy<2.0",
+  "oasis-deconv",
   "opencv-contrib-python",
   "opencv-python",
   "pandas",
