--- a/frontend4WA/Cropper/package.json
+++ b/frontend4WA/Cropper/package.json
@@ -21,7 +21,8 @@
     "date-fns": "^3.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "@types/node": "^22.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
