--- a/frontend4WA/Cropper/tsconfig.app.json
+++ b/frontend4WA/Cropper/tsconfig.app.json
@@ -4,7 +4,8 @@
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
+    // "module": "ESNext",
+    "module": "CommonJS",
     "skipLibCheck": true,
 
     /* Bundler mode */
