--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cairosvg
 coverage
 cython
 easygui
+fastapi
 h5py>=3.4.0
 holoviews>=1.16.2
 inquirer
@@ -22,8 +23,8 @@ mypy
 numpy>=1.26,<2.0.0
 numpydoc
 oasis-deconv
-opencv-python
 opencv-contrib-python
+opencv-python
 pandas
 panel>=1.0.2
 peakutils>=1.3.5
@@ -47,5 +48,6 @@ tifffile
 toml
 tomli
 tqdm
+uvicorn
 yapf
-zarr 
+zarr
