--- a/SystemdServices/app_settings.json
+++ b/SystemdServices/app_settings.json
@@ -3,18 +3,21 @@
     "description": "CLAH M2SD App (via Streamlit)",
     "gui_path": "CLAH_ImageAnalysis/GUI/M2SD_WA.py",
     "port": 8503,
-    "base_url": "m2sd"
+    "base_url": "m2sd",
+    "command": "streamlit run $CLAH_PATH/$GUI_PATH --server.baseUrlPath {base_url} --server.port {port}"
   },
   "SD_WA": {
     "description": "CLAH Segmentation Dictionary App (via Streamlit)",
     "gui_path": "CLAH_ImageAnalysis/GUI/segDictWA.py",
     "port": 8504,
-    "base_url": "segdict"
+    "base_url": "segdict",
+    "command": "streamlit run $CLAH_PATH/$GUI_PATH --server.baseUrlPath {base_url} --server.port {port}"
   },
   "CROPPER": {
     "description": "CLAH Cropper App (via Streamlit)",
     "gui_path": "CLAH_ImageAnalysis/GUI/Cropper_WA.py",
-    "port": 8501,
-    "base_url": "cropper"
+    "port": 8001,
+    "base_url": "Cropper",
+    "command": "cd $REPO_DIR && cd frontend4WA/{base_url} && yarn install && npm run build && cd $REPO_DIR && uvicorn CLAH_ImageAnalysis.GUI.Cropper_WA:app --host 0.0.0.0 --port {port} --log-level debug"
   }
 }
