--- a/environment.yml
+++ b/environment.yml
@@ -8,7 +8,7 @@ dependencies:
   - coverage
   - cython
   - easygui
-  - h5py
+  - fastapi
   - h5py >=3.4.0
   - holoviews >=1.16.2
   - inquirer
@@ -25,6 +25,7 @@ dependencies:
   - mypy
   - numpy >=1.26,<2.0.0
   - numpydoc
+  - oasis-deconv
   - opencv
   - pandas
   - panel >=1.0.2
@@ -50,6 +51,6 @@ dependencies:
   - toml
   - tomli
   - tqdm
-  - tqdm
+  - uvicorn
   - yapf
   - zarr
