--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,20 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "CLAH_ImageAnalysis"
-version = "1.2.0"
+version = "1.3.0"
 description = "Suite of Python programs used for 2-photon calcium imaging analysis"
 authors = [{ name = "Alex Hurowitz" }]
 readme = "README.md"
-keywords = ["2-photon", "miniscope", "1-photon", "calcium imaging", "analysis"]
+keywords = [
+  "2-photon",
+  "miniscope",
+  "1-photon",
+  "calcium imaging",
+  "analysis",
+  "motion correction",
+  "segmentation",
+  "tracking",
+]
 requires-python = ">=3.11"
 
 dependencies = [
